<resources>
    <string name="app_name">ClientPreferencesForCities_DavidWinnicki</string>
    <string name="client_photo">Client Photo</string>
    <string name="photo">Photo</string>
    <string name="button_return">Return</string>
    <string name="button_validate">Validate</string>
    <string name="client_favorite_cities">Client favorite cities</string>
    <string name="client_name_colon">Client name:</string>
    <string name="address_colon">Address:</string>
    <string name="phone_colon">Phone:</string>
    <string name="photo_colon">Photo:</string>
    <string name="list_of_clients">List of clients</string>
    <string name="list_of_cities">List of cities</string>
</resources>
